...

        <TextView
            android:id="@+id/userDetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Joined: Oct 15, 2024 3:45 PM"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/userStatusTextView"
            android:layout_width="wrap_content"
...
