...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="left">

            <Button
                android:id="@+id/filterButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_button_filter"
                android:padding="12dp"
                android:text="Filter 🔽"
...
