...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <Button
                android:id="@+id/filterButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Filter 🔽"
                android:textColor="#FFFFFF"
                android:background="@drawable/rounded_button_filter"
...

        </LinearLayout>
    </LinearLayout>

    <!-- Events List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerLayout"
        android:padding="8dp"
        android:visibility="gone"/>

...
