...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Receive Notifications" />

        <Spinner
            android:id="@+id/notificationSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_background"
            android:padding="8dp"
            android:entries="@array/notification_options" />
...
